--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
-﻿
+﻿version: '3.8'
 
 services:
-  # 1. DATABASE
+  # 1. DATABASE (MySQL)
   db:
     image: mysql:8.0
     container_name: comax_db
@@ -10,70 +10,70 @@ services:
       MYSQL_ROOT_PASSWORD: "11111111"
       MYSQL_DATABASE: "ComaxDb"
     ports:
-      - "3307:3306"
+      - "3307:3306" # Map port 3306 trong docker ra 3307 máy thật (để tránh đụng port MySQL cài sẵn)
     volumes:
       - db_data:/var/lib/mysql
     networks:
       - comax-network
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+    healthcheck: # Kiểm tra xem DB sống chưa thì mới cho các App khác chạy
+      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
       timeout: 20s
       retries: 10
-    
-  # 2. MINIO
+
+  # 2. OBJECT STORAGE (MinIO - Lưu ảnh)
   minio:
-    image: quay.io/minio/minio:latest
-    container_name: minio
-    ports:
-      - "9000:9000"
-      - "9001:9001"
-    environment:
-      MINIO_ROOT_USER: minioadmin
-      MINIO_ROOT_PASSWORD: minioadmin
-    volumes:
-      - ./minio_data:/data
-    command: server /data --console-address ":9001"
+    image: minio/minio
+    container_name: comax_minio
     restart: always
+    command: server /data --console-address ":9001"
+    ports:
+      - "9000:9000" # Port API (Code gọi vào đây)
+      - "9001:9001" # Port Web Console (Bạn truy cập vào đây)
+    environment:
+      MINIO_ROOT_USER: "minioadmin"
+      MINIO_ROOT_PASSWORD: "minioadmin"
+    volumes:
+      - minio_data:/data
     networks:
       - comax-network
 
-  # 3. SETUP MINIO
-  createbuckets:
-    image: minio/mc:latest
-    depends_on:
-      - minio
-    networks:
-      - comax-network
-    entrypoint: >
-      /bin/sh -c "
-      sleep 5;
-      /usr/bin/mc alias set myminio http://minio:9000 minioadmin minioadmin;
-      /usr/bin/mc mb myminio/comics-bucket || true;
-      /usr/bin/mc anonymous set download myminio/comics-bucket;
-      echo '--- DA CAU HINH MINIO XONG ---';
-      exit 0;
-      "
-
-  # 4. REDIS
+  # 3. CACHE (Redis)
   redis:
-    image: redis:alpine
+    image: redis:latest
     container_name: comax_redis
+    restart: always
     ports:
       - "6379:6379"
-    volumes:
-      - redis_data:/data
     networks:
       - comax-network
 
-  # 5. WORKER
-  vip-worker:
-    build:
-      context: .
-      dockerfile: Comax.VipWorker/Dockerfile
-    container_name: comax-vip-worker
+  # 4. ANTI-BOT BYPASS (Flaresolverr - Vượt Cloudflare)
+  flaresolverr:
+    image: flaresolverr/flaresolverr:latest
+    container_name: comax-flaresolverr
     restart: always
     environment:
-      - ConnectionStrings__DefaultConnection=Server=db;Database=ComaxDb;User=root;Password=11111111;
+      - LOG_LEVEL=info
+      - TZ=Asia/Ho_Chi_Minh
+    ports:
+      - "8191:8191"
+    networks:
+      - comax-network
+
+  # 5. BACKEND API (Comax.API)
+  api:
+    build:
+      context: . # Build từ thư mục gốc để copy được Data và Common
+      dockerfile: Comax.API/Dockerfile
+    container_name: comax-api
+    restart: always
+    ports:
+      - "8080:8080" # Map port web ra ngoài
+    environment:
+      # Lưu ý: Server=db (tên service ở trên), không phải localhost
+      - ConnectionStrings__DefaultConnection=Server=db;Port=3306;Database=ComaxDb;User=root;Password=11111111;
+      - Minio__Endpoint=minio:9000
+      - Redis__ConnectionString=redis:6379
     depends_on:
       db:
         condition: service_healthy
@@ -84,14 +84,37 @@ services:
     networks:
       - comax-network
 
-  
+  # 6. CRAWLER WORKER (Comax.Crawler - Con bot đi cào truyện)
+  crawler:
+    build:
+      context: . # Build từ thư mục gốc
+      dockerfile: Comax.Crawler/Dockerfile
+    container_name: comax-crawler
+    restart: always
+    # Worker service không cần ports mapping ra ngoài (trừ khi muốn debug)
+    environment:
+      # Dùng chung DB với API
+      - ConnectionStrings__DefaultConnection=Server=db;Port=3306;Database=ComaxDb;User=root;Password=11111111;
+      # Kết nối MinIO
+      - Minio__Endpoint=minio:9000
+      - Minio__AccessKey=minioadmin
+      - Minio__SecretKey=minioadmin
+      # Kết nối Flaresolverr
+      - Flaresolverr__Url=http://flaresolverr:8191/v1
+    depends_on:
+      db:
+        condition: service_healthy
+      flaresolverr:
+        condition: service_started
+    networks:
+      - comax-network
 
+# Định nghĩa Volume để lưu dữ liệu lâu dài
 volumes:
-  redis_data:
-    driver: local
   db_data:
-    driver: local
+  minio_data:
 
+# Định nghĩa mạng nội bộ để các container nhìn thấy nhau
 networks:
   comax-network:
     driver: bridge
